@@ -1,3 +1,7 @@
+2010-10-23 Homer Xing <homer.xing@gmail.com>
+
+    * Add Fedora repository template
+
 2010-10-15 Homer Xing <homer.xing@gmail.com>
 
     * Append custom repository. Remove chosen repository.
